--- a/index.html
+++ b/index.html
@@ -6,3 +6,14 @@
     <title>My Landing Page</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   </head>
+
+  <body>
+    <header>
+            <h1>Welcome to My First Page</h1>
+            <div>
+                <a href="#">Home</a>
+                <a href="#">Portfolio</a>
+                <a href="#contact">Contact</a>
+            </div>
+    </header>
+  </body>
