added next section skeleton to html

--- a/index.html
+++ b/index.html
@@ -16,4 +16,9 @@
                 <a href="#contact">Contact</a>
             </div>
     </header>
+    <section>
+        <article>
+            
+        </article>
+    </section>
   </body>
