updated colors and adjusted header left to take away open space

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <h1>Welcome to My First Page</h1>
             <div>
                 <a href="#">Home</a>
-                <a href="#">Portfolio</a>
+                <a href="https://ffjt07.github.io/jeremiah-torbit-portfolio/">Portfolio</a>
                 <a href="#contact">Contact</a>
             </div>
     </header>
     <section>
         <article>
-            
+
         </article>
     </section>
   </body>
