created form structure on html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,25 @@
                 <a href="#contact">Contact</a>
             </div>
     </header>
-    <section>
-        
-    </section>
+    <main>
+        <section class="image-box">
+            <h2>Jeremiah Torbit</h2>
+            <img src="./images/IMG_5272.JPG" alt="Jeremiah in suit">
+        </section>
+        <section>
+            <form>
+                <label for="fname">First Name:</label><br>
+                <input type="text" id="fname" name="fname" value="John"><br>
+                <label for="fname">Last Name:</label><br>
+                <input type="text" id="lname" name="lname" value="smith"><br>
+                <label for="email">Email:</label><br>
+                <input type="text" id="email" name="email" value="example@example.com"><br><br>
+                <button type="submit">Send</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <h3>Thank You For Visiting My Page</h3>
+        <h6>&copy; Jeremiah Torbit</h6>
+    </footer>
   </body>
