--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Jeremiah Torbit</h2>
             <img src="./images/IMG_5272.JPG" alt="Jeremiah in suit">
         </section>
-        <section>
+        <section class="contact">
             <form>
                 <label for="fname">First Name:</label><br>
                 <input type="text" id="fname" name="fname" value="John"><br>
