updated about section and styling for footer and about section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             <h2>Jeremiah Torbit</h2>
             <img src="./images/IMG_5272.JPG" alt="Jeremiah in suit">
         </section>
+        <section class="about">
+            <h2>About Me</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error sint eaque quae, aperiam autem voluptatibus corrupti quidem inventore architecto! Reprehenderit fugiat repudiandae, dolorem dolore delectus voluptatem quia dolores quidem ad.</p>
+        </section>
         <section class="contact">
+            <h2>Contact Me</h2>
             <form>
                 <label for="fname">First Name:</label><br>
                 <input type="text" id="fname" name="fname" value="John"><br>
