--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <label for="fname">First Name:</label><br>
                 <input type="text" id="fname" name="fname" value="John"><br>
                 <label for="fname">Last Name:</label><br>
-                <input type="text" id="lname" name="lname" value="smith"><br>
+                <input type="text" id="lname" name="lname" value="Smith"><br>
                 <label for="email">Email:</label><br>
-                <input type="text" id="email" name="email" value="example@example.com"><br><br>
+                <input type="text" id="email" name="email" value="your@example.com"><br><br>
                 <button type="submit">Send</button>
             </form>
         </section>
