updated link to contact section in html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>About Me</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error sint eaque quae, aperiam autem voluptatibus corrupti quidem inventore architecto! Reprehenderit fugiat repudiandae, dolorem dolore delectus voluptatem quia dolores quidem ad.</p>
         </section>
-        <section class="contact">
+        <section id="contact">
             <h2>Contact Me</h2>
             <form>
                 <label for="fname">First Name:</label><br>
