moved images folder into assets folder and relinked image in html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="image-box">
             <h2>Jeremiah Torbit</h2>
-            <img src="./images/IMG_5272.JPG" alt="Jeremiah in suit">
+            <img src="./assets/images/IMG_5272.JPG" alt="Jeremiah in suit">
         </section>
         <section class="about">
             <h2>About Me</h2>
