updated home link to go back to top of page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
             <h1>Welcome to My First Page</h1>
             <div>
-                <a href="#">Home</a>
+                <a href="#home">Home</a>
                 <a href="https://ffjt07.github.io/jeremiah-torbit-portfolio/">Portfolio</a>
                 <a href="#contact">Contact</a>
             </div>
     </header>
-    <main>
+    <main id="home">
         <section class="image-box">
             <h2>Jeremiah Torbit</h2>
             <img src="./assets/images/IMG_5272.JPG" alt="Jeremiah in suit">
