updated about me section from placeholder to real text

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <img src="./assets/images/IMG_5272.JPG" alt="Jeremiah in suit">
         </section>
         <section class="about">
-            <h2>About Me</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error sint eaque quae, aperiam autem voluptatibus corrupti quidem inventore architecto! Reprehenderit fugiat repudiandae, dolorem dolore delectus voluptatem quia dolores quidem ad.</p>
+            <h2>Coding</h2>
+            <p>I do enjoy coding a lot and am excited to help businesses create beautiful and functional UI for their end users to experience and interact with!</p>
         </section>
         <section id="contact">
             <h2>Contact Me</h2>
